# DISC

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  Makefile.in  README.md  configure  configure.ac  configure.scan  disc
include/: config.h  disc.h  errors.h  gateway.h  rest.h  socket.h  types.h  util.h
include/DisC/: DisC_errors.h  DisC_gateway.h  DisC_rest.h  DisC_types.h  DisC_util.h
src/: DisC.c  DisC.h  DisC_errors.c  DisC_gateway.c  DisC_gateway.h  DisC_object.c  DisC_object.h  DisC_rest.c  DisC_rest.h  DisC_types.h  DisC_util.c  DisC_util.h  Makefile  Makefile.am  Makefile.in  disc.c  errors.c  rest.c  socket.c  util.c  very_temporary_library_tester.c
